Fixing incorrect overflow value for recipient box

--- a/blocks/core/ff_module/ff_module-recipient-picker/ff_module-recipient-picker.less
+++ b/blocks/core/ff_module/ff_module-recipient-picker/ff_module-recipient-picker.less
@@ -6,8 +6,7 @@
         display: flex;
         flex-wrap: wrap;
         max-height: 200px;
-        overflow-x: auto;
-        overflow-y: hidden;
+        overflow:auto;
         &, &:not([type="radio"]), &:not([type="checkbox"]) {
             padding: @ff_size_spacing_min * 0.25;
         }
